Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27196

Assert in qtcreator_processlauncher (On Windows, and Qt 6.3)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • None
    • Qt Creator 8.0.0
    • All Other Issues
    • None
    • Linux/X11, Windows
    • de1bef18e2 (qt-creator/qt-creator/master)

      When selecting "Set Up SDK" in Options -> Devices -> Android, the package download succeeds, but during (or after?) the extraction, qtcreator_processlauncher.exe exits with an assertion.

      This happens only when building against Qt 6.3, not with Qt 6.2!

      Output
      Program: C:\Qt\6.3.0\msvc2019_64\bin\Qt6Cored.dll
      Module: 6.3.0
      File: C:\Users\qt\work\qt\qtbase\src\corelib\io\qiodevice_p.h
      Line: 100
      
      ASSERT: "m_buf" in file C:\Users\qt\work\qt\qtbase\src\corelib\io\qiodevice_p.h, line 100
      
      Backtrace
      00000028`6ed9ab40 00007fff`b5d930b8 Qt6Cored!qt_message_fatal(QtMsgType __formal = QtFatalMsg (0n3), class QMessageLogContext * context = 0x00000028`6ed9ae90, class QString * message = 0x00000028`6ed9adf8)+0x104 [C:\Users\qt\work\qt\qtbase\src\corelib\global\qlogging.cpp @ 1869]
      00000028`6ed9adc0 00007fff`b5d7fff9 Qt6Cored!QMessageLogger::fatal(char * msg = 0x00007fff`b668cc70 "ASSERT: "%s" in file %s, line %d")+0xb8 [C:\Users\qt\work\qt\qtbase\src\corelib\global\qlogging.cpp @ 891]
      00000028`6ed9ae60 00007fff`b5e13990 Qt6Cored!qt_assert(char * assertion = 0x00007fff`b66a0b20 "m_buf", char * file = 0x00007fff`b66a7a70 "C:\Users\qt\work\qt\qtbase\src\corelib\io\qiodevice_p.h", int line = 0n100)+0x59 [C:\Users\qt\work\qt\qtbase\src\corelib\global\qglobal.cpp @ 3305]
      00000028`6ed9aed0 00007fff`b5e0a814 Qt6Cored!QIODevicePrivate::QRingBufferRef::chunkSize(void)+0x30 [C:\Users\qt\work\qt\qtbase\src\corelib\io\qiodevice_p.h @ 100]
      00000028`6ed9af00 00007fff`b63cf909 Qt6Cored!QIODevice::readAll(void)+0x264 [C:\Users\qt\work\qt\qtbase\src\corelib\io\qiodevice.cpp @ 1282]
      00000028`6ed9afd0 00007ff6`8b6b6845 Qt6Cored!QProcess::readAllStandardError(void)+0x59 [C:\Users\qt\work\qt\qtbase\src\corelib\io\qprocess.cpp @ 1901]
      00000028`6ed9b040 00007ff6`8b6bd9a7 qtcreator_processlauncher!Utils::Internal::LauncherSocketHandler::handleProcessFinished(void)+0xd5 [C:\Users\alportal\dev\qt-creator-qt6\src\tools\processlauncher\launchersockethandler.cpp @ 181]
      00000028`6ed9b170 00007ff6`8b6b8a68 qtcreator_processlauncher!QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (<function> * f = 0x00007ff6`8b6b1438, class Utils::Internal::LauncherSocketHandler * o = 0x00000028`6ed9fc60, void ** arg = 0x00000028`6ed9b5c8)+0x27 [C:\Qt\6.3.0\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 171]
      00000028`6ed9b1b0 00007ff6`8b6bf4c2 qtcreator_processlauncher!QtPrivate::FunctionPointer<void (<function> * f = 0x00007ff6`8b6b1438, class Utils::Internal::LauncherSocketHandler * o = 0x00000028`6ed9fc60, void ** arg = 0x00000028`6ed9b5c8)+0x28 [C:\Qt\6.3.0\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 209]
      00000028`6ed9b1e0 00007fff`b5eb8ad3 qtcreator_processlauncher!QtPrivate::QSlotObject<void (int which = 0n1, class QtPrivate::QSlotObjectBase * this_ = 0x00000187`25b68200, class QObject * r = 0x00000028`6ed9fc60, void ** a = 0x00000028`6ed9b5c8, bool * ret = 0x00000000`00000000)+0x82 [C:\Qt\6.3.0\msvc2019_64\include\QtCore\qobjectdefs_impl.h @ 420]
      00000028`6ed9b230 00007fff`b5f5cef8 Qt6Cored!QtPrivate::QSlotObjectBase::call(class QObject * r = 0x00000028`6ed9fc60, void ** a = 0x00000028`6ed9b5c8)+0x43 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qobjectdefs_impl.h @ 399]
      00000028`6ed9b280 00007fff`b5f44838 Qt6Cored!doActivate<0>(class QObject * sender = 0x00000187`25b7aff0, int signal_index = 0n10, void ** argv = 0x00000028`6ed9b5c8)+0x908 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qobject.cpp @ 3919]
      00000028`6ed9b560 00007fff`b63d024e Qt6Cored!QMetaObject::activate(class QObject * sender = 0x00000187`25b7aff0, struct QMetaObject * m = 0x00007fff`b68a66c0, int local_signal_index = 0n1, void ** argv = 0x00000028`6ed9b5c8)+0x68 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qobject.cpp @ 3980]
      00000028`6ed9b5a0 00007fff`b63d1f9f Qt6Cored!QProcess::finished(int _t1 = 0n0, QProcess::ExitStatus _t2 = NormalExit (0n0))+0x7e [C:\Users\qt\work\qt\qtbase\src\corelib\Core_autogen\include_Debug\moc_qprocess.cpp @ 312]
      00000028`6ed9b610 00007fff`b63d12bc Qt6Cored!QProcessPrivate::processFinished(void)+0xaf [C:\Users\qt\work\qt\qtbase\src\corelib\io\qprocess.cpp @ 1123]
      00000028`6ed9b670 00007fff`b63cdf26 Qt6Cored!QProcessPrivate::_q_processDied(void)+0x2c [C:\Users\qt\work\qt\qtbase\src\corelib\io\qprocess.cpp @ 1087]
      00000028`6ed9b6a0 00007fff`b5f5d02a Qt6Cored!QProcess::qt_static_metacall(class QObject * _o = 0x00000187`25b7aff0, QMetaObject::Call _c = InvokeMetaMethod (0n0), int _id = 0n12, void ** _a = 0x00000028`6ed9bb18)+0x2b6 [C:\Users\qt\work\qt\qtbase\src\corelib\Core_autogen\include_Debug\moc_qprocess.cpp @ 207]
      00000028`6ed9b7d0 00007fff`b5f44838 Qt6Cored!doActivate<0>(class QObject * sender = 0x00000187`25b5d5d0, int signal_index = 0n3, void ** argv = 0x00000028`6ed9bb18)+0xa3a [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qobject.cpp @ 3934]
      00000028`6ed9bab0 00007fff`b5d5078c Qt6Cored!QMetaObject::activate(class QObject * sender = 0x00000187`25b5d5d0, struct QMetaObject * m = 0x00007fff`b66812e0, int local_signal_index = 0n0, void ** argv = 0x00000028`6ed9bb18)+0x68 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qobject.cpp @ 3980]
      00000028`6ed9baf0 00007fff`b62b19f8 Qt6Cored!QWinEventNotifier::activated(void * _t1 = 0x00000000`00000288, struct QWinEventNotifier::QPrivateSignal _t2 = struct QWinEventNotifier::QPrivateSignal)+0x7c [C:\Users\qt\work\qt\qtbase\src\corelib\Core_autogen\include_Debug\7GB2EGQPHR\moc_qwineventnotifier.cpp @ 147]
      00000028`6ed9bb60 00007fff`b5e7dcb2 Qt6Cored!QWinEventNotifier::event(class QEvent * e = 0x00000187`25b5d7b0)+0xd98 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qwineventnotifier.cpp @ 245]
      00000028`6ed9c350 00007fff`b5e80523 Qt6Cored!QCoreApplicationPrivate::notify_helper(class QObject * receiver = 0x00000187`25b5d5d0, class QEvent * event = 0x00000187`25b5d7b0)+0xd2 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1235]
      00000028`6ed9c3a0 00007fff`b5e7a678 Qt6Cored!doNotify(class QObject * receiver = 0x00000187`25b5d5d0, class QEvent * event = 0x00000187`25b5d7b0)+0xa3 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1164]
      00000028`6ed9c400 00007fff`b5e7c5a7 Qt6Cored!QCoreApplication::notify(class QObject * receiver = 0x00000187`25b5d5d0, class QEvent * event = 0x00000187`25b5d7b0)+0x78 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1148]
      00000028`6ed9c430 00007fff`b5e79cfb Qt6Cored!QCoreApplication::notifyInternal2(class QObject * receiver = 0x00000187`25b5d5d0, class QEvent * event = 0x00000187`25b5d7b0)+0x157 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1068]
      00000028`6ed9c510 00007fff`b5e7e92f Qt6Cored!QCoreApplication::sendEvent(class QObject * receiver = 0x00000187`25b5d5d0, class QEvent * event = 0x00000187`25b5d7b0)+0x7b [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1485]
      00000028`6ed9c540 00007fff`b629b30f Qt6Cored!QCoreApplicationPrivate::sendPostedEvents(class QObject * receiver = 0x00000000`00000000, int event_type = 0n0, class QThreadData * data = 0x00000187`25b35080)+0x55f [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1848]
      00000028`6ed9c720 00007fff`b629960f Qt6Cored!QEventDispatcherWin32::sendPostedEvents(void)+0x8f [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 906]
      00000028`6ed9c760 00007fff`b5ea201c Qt6Cored!QEventDispatcherWin32::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0xbf [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qeventdispatcher_win.cpp @ 476]
      00000028`6ed9f9c0 00007fff`b5ea2304 Qt6Cored!QEventLoop::processEvents(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x7c [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qeventloop.cpp @ 137]
      00000028`6ed9fa10 00007fff`b5e79a9a Qt6Cored!QEventLoop::exec(class QFlags<enum QEventLoop::ProcessEventsFlag> flags = class QFlags<enum QEventLoop::ProcessEventsFlag>)+0x1f4 [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qeventloop.cpp @ 218]
      00000028`6ed9fb00 00007ff6`8b6c13c9 Qt6Cored!QCoreApplication::exec(void)+0x19a [C:\Users\qt\work\qt\qtbase\src\corelib\kernel\qcoreapplication.cpp @ 1389]
      00000028`6ed9fbe0 00007ff6`8b6d73e9 qtcreator_processlauncher!main(int argc = 0n2, char ** argv = 0x00000187`25b33020)+0x1b9 [C:\Users\alportal\dev\qt-creator-qt6\src\tools\processlauncher\processlauncher-main.cpp @ 60]
      00000028`6ed9fd90 00007ff6`8b6d72ce qtcreator_processlauncher!invoke_main(void)+0x39 [d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl @ 79]
      00000028`6ed9fde0 00007ff6`8b6d718e qtcreator_processlauncher!__scrt_common_main_seh(void)+0x12e [d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl @ 288]
      00000028`6ed9fe50 00007ff6`8b6d747e qtcreator_processlauncher!__scrt_common_main(void)+0xe [d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl @ 331]
      00000028`6ed9fe80 00007ff8`1fb87034 qtcreator_processlauncher!mainCRTStartup(void * __formal = 0x00000028`6efe9000)+0xe [d:\a01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_main.cpp @ 17]
      00000028`6ed9feb0 00007ff8`209c2651 KERNEL32!BaseThreadInitThunk+0x14
      00000028`6ed9fee0 00000000`00000000 ntdll!RtlUserThreadStart+0x21
      

        For Gerrit Dashboard: QTCREATORBUG-27196
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes