Utils: Work around readAllStandardError() with QProcess::MergedChannels

Instead of relying QProcess to operate with MergedChannels, keep
the separate channels and merge inside QtcProcess.

Fixes: QTCREATORBUG-27196
Change-Id: I3039267fcd6d90f95f8212642e17049b87af1156
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>